fix: aria-hidden visibility

--- a/tools/admin-edit/admin-edit.css
+++ b/tools/admin-edit/admin-edit.css
@@ -1,4 +1,4 @@
-.admin-edit [aria-hidden] {
+.admin-edit [aria-hidden='true'] {
   display: none;
 }
 
